--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/satyammayy/binaythandle.git"
+    "url": "git+https://github.com/Synthesized-Infinity/Whatsapp-Botto-Void.git"
   },
   "keywords": [
     "bot",
@@ -23,14 +23,15 @@
   "author": "Synthesized Infinity",
   "license": "GPL-3.0",
   "bugs": {
-    "url": "https://github.com/satyammayy/binaythandle/issues"
+    "url": "https://github.com/Synthesized-Infinity/Whatsapp-Botto-Void/issues"
   },
-  "homepage": "https://github.com/satyammayy/binaythandle#readme",
+  "homepage": "https://github.com/Synthesized-Infinity/Whatsapp-Botto-Void#readme",
   "devDependencies": {
     "@types/express": "^4.17.12",
     "@types/fs-extra": "^9.0.11",
     "@types/gifencoder": "^2.0.1",
     "@types/node": "^15.0.2",
+    "@types/node-cron": "^2.0.3",
     "@types/yt-search": "^2.3.0",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
@@ -41,9 +42,11 @@
   "dependencies": {
     "@adiwajshing/baileys": "^3.5.3",
     "@types/qr-image": "^3.2.3",
-    "axios": "^0.21.1",
+    "axios": "^0.21.2",
     "canvas": "^2.8.0",
     "chalk": "^4.1.1",
+    "chess-image-generator-ts": "^1.0.0",
+    "chess-node": "^1.1.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "fs-extra": "^10.0.0",
@@ -53,6 +56,7 @@
     "jimp": "^0.16.1",
     "moment": "^2.29.1",
     "mongoose": "^5.12.12",
+    "node-cron": "^3.0.0",
     "npm": "^7.17.0",
     "qr-image": "^3.2.0",
     "spotifydl-core": "^0.1.2",
